dev ui: ugly convmsgs display, ability to reply to conv => bugged.
The server was freaking out about the author not being in on the
conversation and dropping the connection which results in a reconnection
loop.  May want to consider eating the message in the non-transient
failure case and propagating an error from the server back to the UI.

--- a/clients/devui/lib/rddevui/tabs-common.css
+++ b/clients/devui/lib/rddevui/tabs-common.css
@@ -68,6 +68,19 @@
   }
 }
 
+#human-message {
+  #date {
+    display: block;
+    color: gray;
+    font-size: 80%;
+  }
+}
+#join-message {
+  #joiner, #joinee {
+    display: inline-block;
+  }
+}
+
 #author-contact-request-tab {
   #root {
     padding: 2em;
