client daemon: rep updates.  mob ui: request ui improvements

--- a/clients/addon/data/addon/style.css
+++ b/clients/addon/data/addon/style.css
@@ -529,6 +529,10 @@ input[type=text]#search {
     font-weight: bold;
 }
 
+.pocoContainer {
+  margin: 1em 0em;
+}
+
 .menu {
     list-style-type: none;
     background-color: white;
