mob ui show unread markers in private conv, unread fixes
Fixes:
- broken logic in the inductive meta case because I did typeof 'integer'
  instead of 'number'
- double decref-ing in items modified's delta case.  That logic is not
  needed because we explicitly have a findAndForgetDep method which is
  indeed more convenient than the alternative of trying to find the
  dep in the deps list manually.

--- a/clients/addon/data/addon/style.css
+++ b/clients/addon/data/addon/style.css
@@ -500,6 +500,10 @@ input[type=text]#search {
   background-color: #111;
 }
 
+.privateMessage[watermark="true"] {
+  border-bottom: 2px solid #448;
+}
+
 .privateMessage > .container {
   width: 80%;
   min-width: 80%;
